--- a/src/entradas/que-necesito-para-tener-mi-sitio-web/index.html
+++ b/src/entradas/que-necesito-para-tener-mi-sitio-web/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Consejos y consideraciones para cuando decidas comenzar a hacer tu sitio web">
   <meta name="author" content="Devstar Novatech">
-  <link rel="shortcut icon" href="../../Img/postImg/logoBlog.ico">
+  <link rel="shortcut icon" href="/Img/postImg/logoBlog.ico">
   <title>¿Que necesito para hacer mi sitio web? | Devstar Novatech Blog</title>
   <script type="application/ld+json">
     {
@@ -19,19 +19,27 @@
     </script>
   <!-- Bootstrap core CSS -->
   <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
-  <link rel="stylesheet" href="../../css/bootstrap.css">
+  <link rel="stylesheet" href="/css/bootstrap.css">
 
   <!-- Custom fonts for this template -->
   <!-- <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"> -->
-  <link rel="stylesheet" href="../../css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="../../css/clean-blog.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../css/slider.min.css">
-  <link rel="stylesheet" href="../../css/main.css">
-  <link rel="stylesheet" href="../../css/blogStyle.css">
+  <link href="/css/clean-blog.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/slider.min.css">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/blogStyle.css">
+	<link rel="stylesheet" type="text/css" href="/css/qkconsent.css" />
+  <script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+  
+		gtag('config', 'UA-142838512-1');
+	  </script>
 </head>
 
 <body>
@@ -39,7 +47,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="../../index.html">Devstar Novatech</a>
+      <a class="navbar-brand" href="http://devstar-novatech.com/">Devstar Novatech</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menú
         <i class="fa fa-bars"></i>
@@ -47,16 +55,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="../../index.html">Inicio</a>
+            <a class="nav-link" href="/">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../aboutBlog.html">Acerca de</a>
+            <a class="nav-link" href="/aboutBlog.html">Acerca de</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../index.html#publicaciones">Posts</a>
+            <a class="nav-link" href="/#publicaciones">Posts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../contactBlog.php">Contacto</a>
+            <a class="nav-link" href="/contactBlog.php">Contacto</a>
           </li>
         </ul>
       </div>
@@ -64,7 +72,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('../../Img/postImg/hosting-servidoresXl.jpg');">
+  <header class="masthead" style="background-image: url('/Img/postImg/hosting-servidoresXl.jpg');">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -73,7 +81,7 @@
             <h1>¿Que necesito para tener mi sitio web?</h1>
             <h2 class="subheading">Consideraciones y material necesario antes de crear tu sitio web</h2>
             <span class="meta">Publicado por
-              <a href="../../index.html">Devstar Novatech</a>
+              <a href="http://devstar-novatech.com/">Devstar Novatech</a>
               el 26 de febrero de 2021</span>
           </div>
         </div>
@@ -156,7 +164,7 @@
           <p class="text-justify">Si planeas hacer tú mismo el sitio web puedes ayudarte de un sistema de gestión de contenido (CMS), estas herramientas ofrecen integración con diferentes aplicaciones y sistemas, además de ser muy fácil de administrar para las empresas, sin tener que depender de su área de sistemas o de proveedores externos.</p>
           <p>Sin embargo si quieres evitar esta situación, ahorrar tiempo y tener un sitio web profesional, puedes <a href="">contactarnos</a> ofrecemos servicios agiles de implementación para que puedas tener tu sitio web.</p>
           <div class="d-flex justify-content-center">
-            <img class="img-fluid " style="width: 50%;" src="../../Img/postImg/sitio-web.webp" alt="sitio-web.webp">
+            <img class="img-fluid " style="width: 50%;" src="/Img/postImg/sitio-web.webp" alt="sitio-web.webp">
           </div>
           <span class="caption text-muted">Tu sitio web es tu carta de presentación con el mundo, haz que sea única y que refleje la verdadera identidad de tu marca.</span>
 
@@ -175,7 +183,7 @@
           <div class="">
             <div class="d-flex justify-content-center"><p class="h3">¿Tienes alguna duda o comentario?</p></div>
             <div class="d-flex justify-content-center">
-              <a class="btn btn-outline-dark rounded mt-2" href="../../contactBlog.php"><b>Contacto</b></a>
+              <a class="btn btn-outline-dark rounded mt-2" href="/contactBlog.php"><b>Contacto</b></a>
             </div>
           </div>
           <!-- <p>Placeholder text by
@@ -196,7 +204,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="../../index.html">
+              <a href="http://devstar-novatech.com/">
                 <span class="fa-stack fa-2x">
                   <!-- <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-twitter fa-stack-1x fa-inverse"></i> -->
@@ -205,7 +213,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="../../index.html">
+              <a href="http://devstar-novatech.com/">
                 <span class="fa-stack fa-2x">
                   <!-- <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i> -->
@@ -214,7 +222,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="../../index.html">
+              <a href="http://devstar-novatech.com/">
                 <span class="fa-stack fa-2x">
                   <!-- <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i> -->
@@ -230,13 +238,63 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="../../js/jquery.min.js"></script>
-  <script src="../../js/popper.min.js"></script>
-  <script src="../../js/bootstrap.min.js"></script>
+  <script src="/js/jquery.min.js"></script>
+  <script src="/js/popper.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
   <!-- Custom scripts for this template -->
-  <script src="../../js/clean-blog.min.js"></script>
-  <script src="../../js/scrollreveal.min.js"></script>
+  <script src="/js/clean-blog.min.js"></script>
+  <script src="/js/scrollreveal.min.js"></script>
 
+  <script src="/js/qkconsent.js" data-cfasync="false"></script>
+  <script>
+  window.addEventListener('load', function(){
+    window.cookieconsent.initialise({
+     revokeBtn: "<div class='cc-revoke'></div>",
+     type: "opt-in",
+     theme: "classic",
+     palette: {
+         popup: {
+             background: "rgb(28 44 23 / 90%)",
+             text: "#fff"
+          },
+         button: {
+             background: "#CAD160",
+             text: "#000"
+          }
+      },
+     content: {
+         message: "Utilizamos cookies para mejorar la experiencia de los usuarios y para analizar "+
+         "la concurrencia al sitio web. Por estas razones, es posible que compartamos los datos que ha"+
+         " proporcionado con nuestros socios de analíticas web. Al hacer clic en \"Acepto cookies\","+
+         " usted autoriza el almacenamiento de todas las tecnologías descriptas en nuestra Política de"+
+         " cookies en su dispositivo.",
+         link: "politicas",
+         allow: "Acepto cookies",
+         deny: "Rechazar",
+         href: "mrvcookie.com/cookies"
+      },
+      onInitialise: function(status) {
+        if(status == cookieconsent.status.allow) myScripts();
+      },
+      onStatusChange: function(status) {
+        if (this.hasConsented()) myScripts();
+      }
+    })
+  });
+  
+  function myScripts() {
+  
+     // Paste here your scripts that use cookies requiring consent. See examples below
+  
+     // Google Analytics, you need to change 'UA-00000000-1' to your ID
+        (function(wdw,doc,tag,url,ja,a,m){
+        a=doc.createElement(tag),m=doc.getElementsByTagName(tag)[0];
+        a.async=1;
+        a.src=url;
+        m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.googletagmanager.com/gtag/js?id=UA-142838512-1','gtag');
+  }
+  </script>
 </body>
 
 </html>
