--- a/src/entradas/como-acelerar-la-carga-de-un-sitio-web/index.html
+++ b/src/entradas/como-acelerar-la-carga-de-un-sitio-web/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Útiles consejos para que la carga de tu sitio web no se detenga por archivos de comando externos JavaScript y posicionarte mejor.">
   <meta name="author" content="Devstar Novatech">
-  <link rel="shortcut icon" href="../../Img/postImg/logoBlog.ico">
+  <link rel="shortcut icon" href="/Img/postImg/logoBlog.ico">
   <title>Como acelerar la carga de tu sitio web | Devstar Novatech Blog</title>
   <script type="application/ld+json">
     {
@@ -19,19 +19,19 @@
     </script>
   <!-- Bootstrap core CSS -->
   <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
-  <link rel="stylesheet" href="../../css/bootstrap.css">
+  <link rel="stylesheet" href="/css/bootstrap.css">
 
   <!-- Custom fonts for this template -->
   <!-- <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"> -->
-  <link rel="stylesheet" href="../../css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="../../css/clean-blog.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../css/slider.min.css">
-  <link rel="stylesheet" href="../../css/main.css">
-  <link rel="stylesheet" href="../../css/blogStyle.css">
+  <link href="/css/clean-blog.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/slider.min.css">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/blogStyle.css">
 
 </head>
 
@@ -40,7 +40,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="../../index.html">Devstar Novatech</a>
+      <a class="navbar-brand" href="www.devstar-novatech.com">Devstar Novatech</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Men&uacute;
         <i class="fa fa-bars"></i>
@@ -48,16 +48,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="../../index.html">Inicio</a>
+            <a class="nav-link" href="/">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../aboutBlog.html">Acerca de</a>
+            <a class="nav-link" href="/aboutBlog.html">Acerca de</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../index.html#publicaciones">Posts</a>
+            <a class="nav-link" href="/#publicaciones">Posts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../contactBlog.php">Contacto</a>
+            <a class="nav-link" href="/contactBlog.php">Contacto</a>
           </li>
         </ul>
       </div>
@@ -65,7 +65,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('../../Img/postImg/laptop-3174729_1920.jpg')">
+  <header class="masthead" style="background-image: url('/Img/postImg/laptop-3174729_1920.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -154,7 +154,7 @@
           <p class="text-justify">Al utilizar este atributo no se garantiza que las secuencias de comandos asíncronas se ejecuten en un orden específico. También se recomienda no usar <code>document.write</code> en ellas, solo en las que si necesiten ejecutarse en un orden específico.</p>
 
           <div class="d-flex justify-content-center noMostrarMas768">
-            <img class="img-fluid" src="../../Img/postImg/carga-sitio-web.webp" alt="carga-sitio-web.webp">
+            <img class="img-fluid" src="/Img/postImg/carga-sitio-web.webp" alt="carga-sitio-web.webp">
           </div>
           <span class="caption text-muted">Esto es de especial importancia cuando tu sitio es accesado desde dispostivos móviles</span>
           
@@ -163,7 +163,7 @@
           <p class="text-justify">Las secuencias de comandos <b>JavaScript</b> que no sean necesarias para renderizar o cargar páginas por primera vez, pueden cargarse y ejecutarse una vez que se haya completado el primer renderizado o se hayan cargado otras partes más importantes. De este modo, se pueden reducir conflictos de recursos y mejorar el rendimiento.</p>
 
           <p class="text-justify">
-          Si necesitas que tu sitio o página web sean optimizados, <a href="../../contactBlog.php">¡contáctanos!</a> Realizamos el análisis de tu sitio y te proporcionamos soluciones con presupuesto a tu medida.
+          Si necesitas que tu sitio o página web sean optimizados, <a href="/contactBlog.php">¡contáctanos!</a> Realizamos el análisis de tu sitio y te proporcionamos soluciones con presupuesto a tu medida.
           </p>
 
           <small class="citasBlogFont text-muted">Fuente, 
@@ -174,7 +174,7 @@
           <div>
             <div class="d-flex justify-content-center"><p class="h3">¿Tienes alguna duda o comentario?</p></div>
             <div class="d-flex justify-content-center">
-              <a class="btn btn-outline-dark rounded mt-2" href="../../contactBlog.php"><b>Contacto</b></a>
+              <a class="btn btn-outline-dark rounded mt-2" href="/contactBlog.php"><b>Contacto</b></a>
             </div>
           </div>
           
@@ -190,7 +190,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="../../index.html">
+              <a href="www.devstar-novatech.com">
                 <span class="fa-stack fa-2x">
                   <!-- <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-twitter fa-stack-1x fa-inverse"></i> -->
@@ -199,7 +199,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="../../index.html">
+              <a href="www.devstar-novatech.com">
                 <span class="fa-stack fa-2x">
                   <!-- <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i> -->
@@ -208,7 +208,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="../../index.html">
+              <a href="www.devstar-novatech.com">
                 <span class="fa-stack fa-2x">
                   <!-- <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i> -->
@@ -224,12 +224,12 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="../../js/jquery.min.js"></script>
-  <script src="../../js/popper.min.js"></script>
-  <script src="../../js/bootstrap.min.js"></script>
+  <script src="/js/jquery.min.js"></script>
+  <script src="/js/popper.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
   <!-- Custom scripts for this template -->
-  <script src="../../js/clean-blog.min.js"></script>
-  <script src="../../js/scrollreveal.min.js"></script>
+  <script src="/js/clean-blog.min.js"></script>
+  <script src="/js/scrollreveal.min.js"></script>
 
 </body>
 
